--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="ch.rrelmy.android.locationcachemap"
-      android:versionCode="3"
-      android:versionName="0.3">
+      android:versionCode="4"
+      android:versionName="0.4">
     <uses-sdk android:minSdkVersion="7" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 	
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="ch.rrelmy.android.locationcachemap.AppState">
     	<uses-library android:name="com.google.android.maps" />
